--- a/main.css
+++ b/main.css
@@ -28,14 +28,15 @@ a {
 .content {
 	display: flex;
 	justify-content: space-between;
-	padding: 100px 0;
+	padding: 40px 40px 0;
+
 }
 
 .container {
 	 width: 100%;
 	 max-width: 1200px;
 	 margin: 0 auto;
-	 padding: 100px 15px;
+	 box-shadow: 0px 0px 10px 2px var(--darktext);
 }
 
 :root {
@@ -46,7 +47,7 @@ a {
 
 .side__content {
 	width: 48%;
-	padding: 20px 0;
+	padding: 40px;
 	color: var(--brighttext);
 	background-color: var(--darktext);
 	margin-right: 70px;
@@ -114,6 +115,7 @@ h3  {
 .main__content {
 	width: 52%;
 	color: var(--darktext);
+	padding-top: 40px;
 }
 
 h2 {
@@ -131,5 +133,23 @@ h2 {
 
 .block__list span {
 	font-weight: 600;
+}
+
+pre {
+	background-color: #f0f0f0;
+}
+
+.footer__content {
+	display: flex;
+    justify-content: center;
+    padding: 20px;
+    align-items: center;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.rss-logo {
+	margin-right: 20px;
+	width: 60px;
 }
 
